feat-命令行创建用户

--- a/apps/honeypot_server/settings.yaml
+++ b/apps/honeypot_server/settings.yaml
@@ -27,6 +27,7 @@ whiteList:
   - /honeypot_server/login
   - /honeypot_server/captcha
   - /honeypot_server/site
+  - /honeypot_server/register
 #mq:
 #  user: admin
 #  password: password
