--- a/apps/image_server/settings.yaml
+++ b/apps/image_server/settings.yaml
@@ -9,7 +9,7 @@ db:
   connMaxLifetime: 10000
 logger:
   format: json
-  appName: honeypot_server
+  appName: image_server
   level: info
 redis:
   addr: 10.211.55.4:6379
@@ -17,7 +17,7 @@ redis:
   db: 1
 system:
   mode: release # debug
-  webAddr: ":8079" # web的运行地址
+  webAddr: ":8080" # web的运行地址
 #  grpcAddr: ":8081"
 jwt:
   expires: 8640000
