--- a/apps/honeypot_server/settings.yaml
+++ b/apps/honeypot_server/settings.yaml
@@ -18,7 +18,7 @@ redis:
 system:
   mode: release # debug
   webAddr: ":8079" # web的运行地址
-#  grpcAddr: ":8081"
+  grpcAddr: ":8081"
 jwt:
   expires: 8640000
   issuer: reisen
